css/main.css
@font-face {
  font-family: 'komika';
  src: url('Komika_display.ttf') format('truetype');
}

@font-face {
  font-family: 'bebas';
  src: url('bebas.ttf') format('truetype');
}

body {
  background: #ddd !important;
  color: #fff !important;
}

.header {
  background: url(../img/marvel-logo.svg) no-repeat;
  width: 100%;
  background-color: #F0141E;
  background-size: contain;
  height: 150px; 
}

.info-holder {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
}

.info-holder > img {
  max-width: 100%;
  margin: 10px;
}

.info {
  display: flex;
  flex-grow: 1;
  flex-direction: column;
  flex-basis: 50%;
  margin: 10px;
}

.info-holder > .info h1 {
  color: #fff;
  font-family: bebas;
  background: #f0141e;
  letter-spacing: -0.05em;
  word-spacing: 0.3em;
  padding: 8px;
  margin: 0;
}

.info h3 {
  border: 4px solid #333;
  background: #ff9;
  font-size: 24px;
  padding: 5px;
  font-family: komika;
  color: #333;
}

.card {
  background: #eee;
  margin: 5px;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
  width: 250px;
  height: 365px;
}

.card > img {
  width: 100%;
  padding: 10px;
}

.card > p {
  font-family: 'komika';
  display: table;
  padding: 5px;
  position: relative;
  margin: 10px;
  margin-top: -33%;
  border: 2px solid #111;
  color: #111;
  background: #bbb; p 
}

.text-card {
  background: #eee;
  margin: 5px;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.25);
  width: 250px;
}

.text-card > p {
  font-family: 'komika';
  padding: 5px;
  border: 2px solid #111;
  color: #111;
  background: #bbb; p 
}

.card-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

.linkback {
  height: 20px;
  position: relative;
  float: right;
  margin: -355px 10px 0 0;
}

.content-holder {
  padding-top: 7.16em;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around; 
}

.content-holder h1 {
  font-family: bebas;
  color: #f0141e;
  letter-spacing: -0.05em;
  word-spacing: 0.5em;
  width: 100%;
  margin: 5px 0 0 10px;
}

.content-holder > h2 {
  font-family: bebas;
  letter-spacing: -0.05em;
  background: #f0141e;
  width: 100%;
  padding: 10px; 
  margin: 10px;
}

#characters, #events, #comics, #creators, #series {
  height: 0px;
  overflow: hidden;
}

.spinner{
  position: fixed;
  margin: auto;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border: 16px solid #f3f3f3; /* Light grey */
  border-top: 16px solid #3498db; /* Blue */
  border-radius: 50%;
  width: 120px;
  height: 120px;
  animation: spin 2s linear infinite;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

.material-icons {
  float: right;
  margin-top: 5px;
}

.logo {
  margin-left: 4px;
}

#navbar {
  padding: 0;
  background: #F0141E;
}

#navbar > ul.nav {
  float: right;
  margin-top: 54px;
  margin-right: 3px;
}

.nav.navbar-nav > li {
  font-family: 'komika';
  border: 1px solid #111;
  margin: 7px;
  background: #bbb;
}

li > a {
  color: #111 !important;
  padding: 5px 10px !important;
}

.navbar.m-nav {
  z-index: 100;
  margin: 0;
  width: 100%;
  position: fixed;
  border: 0;
}

.navbar-header.m-header {
  background: #f0141e;
}

.navbar-toggle {
  background: #f0141e !important;
  border-color: #fff !important;
  margin-right: 10px !important;
}

.icon-bar {
  background: #fff !important;
}

#navbar.in > ul.nav {
  width: 100%;
  margin: 1px;
}

.search, .about {
  position: fixed;
  top: 200px;
  left: 3%;
  right: 3%;
  background: #f0141e;
  box-shadow: 0 2px 6px rgba(0,0,0,0.17), 0 4px 6px rgba(0,0,0,0.23);
  margin: 0 auto;
  max-width: 800px;
  z-index: 10;
}

span {
  font-family: 'bebas';
  font-size: 30px;
  letter-spacing: -0.07em;
  margin: 5px 10px;
}

.close > i {
  color: #fff;
}

.logo > img {
  height: 18vmin;
  max-height: 100px;
}

.logo.mini > img {
  height: 9vmin;
  max-height: 50px;
  margin-left: 5px;
}

.logo > p {
  display: inline-block;
  position: absolute;
  font-family: komika;
  color: #fff;
  font-size: 15vmin;
  margin-left: -0.15em;
  letter-spacing: -0.06em;
}

.logo.mini > p {
  font-size: 8vmin;
}

@media all and (min-width: 560px) and (min-height: 560px) {
  .logo > p {
    font-size: 85px;
  }
  .logo.mini > p {
    font-size: 42px;
  }
}

form {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
}

form p {
  font-family: 'bebas';
  font-size: 20px;
  letter-spacing: -0.05em;
  word-spacing: 0.2em;
  margin: 0;
}

div > select {
  width: 280px;
  height: 30px;
  border: 2px solid #111;
  font-family: 'komika';
  font-size: 15px;
  color: #111;
  background: #bbb;
  margin: 3px 0;
}

div > input[type=search] {
  width: 280px;
  height: 30px;
  border: 2px solid #111;
  color: #111;
  font-family: 'komika';
  font-size: 15px;
  background: #bbb;
  margin: 3px 0;
  padding: 0 10px;
}

form > input[type=submit] {
  width: 97%;
  background: #f12521;
  border: 0;
  height: 40px;
  margin: 10px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.2);
  font-family: bebas;
  font-size: 24px;
}

.about-what {
  font-family: 'bebas';
  word-spacing: 0.2em;
  margin: 0 10px;
}

.about-text {
  background: #ff9;
  border: 2px solid #111;
  color: #111;
  font-family: 'komika';
  margin: 5px 10px;
  padding: 10px;
}

.about-footer {
  display: flex;
  justify-content: space-between;
}

.about-footer p {
  font-family: 'komika';
  background: #bbb;
  color: #111;
  margin: 10px;
  border: 2px solid #111;
  padding: 2px 10px;
}

.darken {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background: rgba(0,0,0,0.6);
}

.footer {
  display: flex;
  position: fixed;
  bottom: 0;
  background: #f0141e;
  width: 100%;
  justify-content: space-between;
}

.footer p {
  margin: 2px 10px;
  color: #fff;
  font-family: 'bebas';
  word-spacing: 0.15em;
  letter-spacing: 0.01em;
}

.footer-info {
  display: none; 
}

@media all and (min-width: 600px) {
  .footer-info {
    display: block;
  }
}

